fix: Apply left alignment to .details on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -33,9 +33,9 @@
     display: flex;
     justify-content: flex-start;
   }
-  .content p,
-  .content ul,
-  .content li {
+  .layout .details p,
+  .layout .details ul,
+  .layout .details li {
     text-align: left !important;
   }
 }
